Multiple US states allowed per Library
* Multiple US states allowed per Library

New model LibraryStates has been added
Library.us_state is deprecated and a deprecation notice has been added
Schema and Data migrations have been added

All places where Library.us_state was in use, now Library.get_us_states() is in use
Whenever only one state is required we use Library.get_us_states()[0], so the first State in the DB takes priority

* Test cases added for multiple us_states

Changed get_primary_us_state to get_first_us_state
Added an explicit order by "id" for get_us_states

* Pluralized state_name variable

--- a/templates/django/library_card/library_card_request_denied.html
+++ b/templates/django/library_card/library_card_request_denied.html
@@ -19,8 +19,8 @@
         <div class="form-message-area">
             <h4>{% blocktrans %}Library Card not allowed{% endblocktrans %}</h4>
 
-            {% if state_name %}
-                {% blocktrans with state_name=state_name %}You must be in <strong>{{ state_name }} </strong> to request
+            {% if state_names %}
+                {% blocktrans with state_names=state_names %}You must be in <strong>{{ state_names }} </strong> to request
                     this library card{% endblocktrans %}
             {% endif %}
         </div>
