--- a/templates/django/registration/password_reset_complete.html
+++ b/templates/django/registration/password_reset_complete.html
@@ -2,20 +2,22 @@
 {% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% trans "Email Sent" as email_sent %}
-{% trans "Password reset complete" as password_reset_complete %}
-{% trans "Your new password has been set. " as new_password_has_been_set %}
-{% trans "You can log in now on the" as you_can_log %}
-{% trans "log in page" as login_page %}
+
 {% block title %}
+    {% trans "Email Sent" as email_sent %}
     {{ block.super }} | {% trans email_sent %}
 {% endblock %}
 
 {% block content %}
-    <h1>{% trans password_reset_complete %}</h1>
+    {% trans "Password reset complete" as password_reset_complete %}
+    {% trans "Your new password has been set. " as new_password_has_been_set %}
+    {% trans "You can log in now on the" as you_can_log %}
+    {% trans "log in page" as login_page %}
+    
+    <h1>{{ password_reset_complete }}</h1>
     <p>
 
-        {% trans new_password_has_been_set %} {% trans you_can_log %} <a title="{% trans login_page %}"
-                                                                         aria-label="{% trans login_page %}"
-                                                                         href="{% url 'login' %}">{% trans login_page %}</a>.</p>
+        {{ new_password_has_been_set }} {{ you_can_log }} <a title="{{ login_page }}"
+                                                                         aria-label="{{ login_page }}"
+                                                                         href="{% url 'login' %}">{{ login_page }}</a>.</p>
 {% endblock %}
