--- a/templates/django/includes/footer.html
+++ b/templates/django/includes/footer.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% trans "&copy; 2019 Lyrasis." as copyright %}
+{% trans "&copy; 2019 The Palace Project." as copyright %}
 {% trans "All Rights Reserved" as copyright2 %}
 {% trans "Go to top" as gotop %}
 <footer id="main-footer" role="contentinfo">
