Send out user welcome email alongside email verification email
* Send out user welcome email alongside email verification email

We send it out at the same time as the verification because at the time
of email verification we have lost the context of which card was created
A user may have multiple cards

* Changed welcome email verbiage for verification

--- a/templates/django/email/welcome_user.html
+++ b/templates/django/email/welcome_user.html
@@ -13,5 +13,11 @@
 {% blocktrans %}You can login in your personal space here: {% endblocktrans %}
 <a href="{{ login_url }}">{{ login_url }}</a>
 <p>{% blocktrans with library=library %}The {{ library.name }} team{% endblocktrans %}</p>
+
+{% if user_email_verified == False %}
+    <p>{% blocktrans %} You must verify your email address before using this account. 
+        An email with instructions for verifying your account has already been sent to this address.{% endblocktrans %}</p>
+{% endif %}
+
 </body>
 </html>
