Hide the unused "Save and add another" and "Save and continue" buttons
Only the "Save" button remains in both the Add and Change admin forms
This is a CSS change, the actual buttons still remain

--- a/templates/django/admin/base_site.html
+++ b/templates/django/admin/base_site.html
@@ -139,6 +139,12 @@
                 visibility: hidden;
             }
 
+            /* Hide unrequired save button types in add and change forms*/
+            .submit-row input[name="_addanother"],
+            .submit-row input[name="_continue"] {
+                display: none;
+            }
+
         </style>
     {% endblock %}
 
