CSV bulk upload for cards and users
* Initial basic, synchronous CSV bulk upload

* Added a bulk_upload_prefix to the Library model

This keeps the upload and web sign up cards seperate
so that the serial number generation does not break

* Email verification page also allows password setting

This is only possible when the user has no password previously set
Since the verification page is the first page a user might see on account creation
The password set form is included into the verification page

* Bulk upload csv results email

Will be sent out to the currently logged in admin at upload time

* Added optional CSV upload headers

Added bootstrap to the upload form
Added some information on the CSV file format

* Async mode bulk upload

Bulk uploads can be either async or sync
In async mode we start a daemon thread to create/update the cards
Django DB objects and sessions are thread-safe

* Documentation updates

* Added library configurable boolean to allow bulk uploads

This will be false by default for all libraries
The upload page will only display libraries taht have this value activated

* Removed a print statement

* Card numbers are editable in the admin panel

Only on creation and will be prefixed with the library prefix automatically
Uniqueness is checked before creation

* Card number generation loops incase a unique number is not found

It will loop for a maximum of 100 tries now and throw an error if it does not find
a unique number in its series
The sequence will advance for those 100 tries so the next attempt may succeed

* Some comment and typing updates

--- a/templates/django/admin/base_site.html
+++ b/templates/django/admin/base_site.html
@@ -153,6 +153,12 @@
                 padding: 4px;
             }
 
+            .vlc-text-info {
+                display: inline-block;
+                padding: 8px;
+                background-color: #339EFF20;
+            }
+
 
         </style>
     {% endblock %}
