Removed url encoding from the header menu for the users name
This caused encodable characters to show up incorrectly, encoding is only required
for the url href, not the label

--- a/templates/django/includes/menu.html
+++ b/templates/django/includes/menu.html
@@ -76,7 +76,7 @@
                             {% endif %}
                             <li class="has-dropdown">
                                 <a href="/account/edit/{{ user.first_name|urlencode }}"> <i class="icon icon-user"></i>
-                                    <span>{{ user.first_name|urlencode }}</span></a>
+                                    <span>{{ user.first_name }}</span></a>
                                 <ul class="dropdown">
                                     <li>
                                         <a title="{% trans my_profile %}" aria-label="{% trans my_profile %}"
