Feature/custom email text
* Customizable text for the top and bottom of the welcome email

- A new model is added to keep the text fields separate from the library model
- A form with preview capabilities has been added
- A new button widget which is a link wrapped button for forms has been added

* Custom top and bottom text for welcome emails added to the sender functionality

* Turns out storing HTML strings in the DB makes the tags appear in the form fields

To avoid this we convert text whitespaces to HTML in both the JS and Python independently
and store the non-HTML version in the database
This means we no longer need the hidden form fields

--- a/templates/django/email/welcome_user.html
+++ b/templates/django/email/welcome_user.html
@@ -5,6 +5,8 @@
 <body>
     <p>{% translate "Hello," %}</p>
 
+    {{ custom_top_text | safe }}
+
     <p>{% blocktrans with library_name=library.name %}
         You are receiving this message because someone used this email address
         to request a library card for {{ library_name }}.
@@ -45,6 +47,8 @@
         <a href="{{ login_url }}">{{ login_url }}</a>
     </p>
     {% endif %}
+
+    {{ custom_bottom_text | safe }}
 
     <p>{% blocktrans with library_name=library.name %}The {{ library_name }} team{% endblocktrans %}</p>
 
