Fixed the header link color to be visible on the main admin page

--- a/templates/django/admin/base_site.html
+++ b/templates/django/admin/base_site.html
@@ -50,6 +50,10 @@
                 color: var(--primary-fg);
             }
 
+            .module caption a:visited {
+                color: #f8f8f8;
+            }
+
             div.breadcrumbs {
                 background: var(--primary-color-faded);
             }
