Welcome user email template fixes for opening paragraph
It no checks the has_verification status before mentioning the verification link

--- a/templates/django/email/welcome_user.html
+++ b/templates/django/email/welcome_user.html
@@ -10,9 +10,15 @@
     <p>{% blocktrans with library_name=library.name %}
         You are receiving this message because someone used this email address
         to request a library card for {{ library_name }}.
-        <br>
-        If you were not expecting this to happen, please ignore this message and do NOT click the verification link below.
         {% endblocktrans %}
+        <br>
+        {# We keep the text "message" in both if-else blocks so that we can control the spacing for the "."(period) #}
+        {% translate "If you were not expecting this to happen, please ignore this" %}
+        {% if has_verification %}
+            {% translate "message and do NOT click the verification link below." %}
+        {% else %}
+            {% translate "message." %}
+        {% endif %}
     </p>
 
     <p>{% blocktrans with library_name=library.name %}Thank you for joining {{ library_name }}.{% endblocktrans %}
