--- a/templates/django/accounts/includes/profile_address.html
+++ b/templates/django/accounts/includes/profile_address.html
@@ -15,7 +15,7 @@
             <li><span class="value">{{ user.street_address_line2 }}</span></li>
         {% endif %}
         {% if user.zip or  user.city %}
-            <li><span class="value">{{ user.city }}, {{ user.us_state }} {{ user.zip }} (USA) </span></li>
+            <li><span class="value">{{ user.city }}, {{ user.place.name }} {{ user.zip }} (USA) </span></li>
         {% endif %}
 
 
