Only show the address autofill modal if the library needs the address
* Only show the address autofill modal if the library needs the address

Else do not show the modal, so as to not confuse the user

* Removed unneeded comment

--- a/templates/django/library_card/library_card_request.html
+++ b/templates/django/library_card/library_card_request.html
@@ -83,6 +83,7 @@
             var cityEle = $("#id_city"), zipEle = $("#id_zip");
             var city = cityEle.val();
             var zip = zipEle.val();
+            var addressMandatory = {% if patron_address_mandatory %} true {% else %} false {% endif %};
 
             // clear out values
             cityEle.val("");
@@ -104,8 +105,8 @@
             $("#location-autofill-yes").on("click", function () { modalCallback(true) })
             $("#location-autofill-no").on("click", function () { modalCallback(false) })
 
-            // display the modal
-            if (city || zip) {
+            // display the modal only if the address is mandatory and we have valid data
+            if (addressMandatory && (city || zip)) {
                 $("#location-autofill-modal").modal("open")
             }
         });
