Fixed email typos

--- a/templates/django/registration/password_reset_done.html
+++ b/templates/django/registration/password_reset_done.html
@@ -9,11 +9,11 @@
 {% block content %}
     <h1>{% blocktrans %} Email Sent {% endblocktrans %}</h1>
     <p>{% blocktrans %} Check your inbox! {% endblocktrans %}</p>
-    <p>{% blocktrans %} We've emailed you instructions for setting your password. You should receive the email
-        shortly!  {% endblocktrans %}.</p>
+    <p>{% blocktrans %} We've emailed you instructions for resetting your password. You should receive the email
+        shortly.  {% endblocktrans %}</p>
 
     <p>
-        {% blocktrans %} Don't forgot to check your spam folder. {% endblocktrans %}
+        {% blocktrans %} Don't forget to check your spam folder. {% endblocktrans %}
     </p>
 
     {% if messages %}
