Make template changes

--- a/templates/django/email/welcome_user.html
+++ b/templates/django/email/welcome_user.html
@@ -3,60 +3,72 @@
 <html lang="en">
 
 <body>
-    <p>{% translate "Hello," %}</p>
+    <p>
+        {% translate "Hello," %}
+    </p>
 
     {{ custom_top_text | safe }}
 
-    <p>{% blocktrans with library_name=library.name %}
-        You are receiving this message because someone used this email address
-        to request a library card for {{ library_name }}.
+    <p>
+        {% blocktrans with library_name=library.name %}
+            Thank you for joining {{ library_name }}.
         {% endblocktrans %}
-        <br>
+    </p>
+
+    {% if has_verification %}
+        <p>
+            {% blocktrans %}
+                Please verify your email address within the next 24 hours by clicking here:
+            {% endblocktrans %}
+            <a href="{{ verification_link }}">{{ verification_link }}</a>
+        </p>
+        <p>
+            <em><strong>
+            {% blocktrans %}
+                Your account will not be activated until the link has been clicked. You may recreate a
+                new verification email by clicking the link above again.
+            {% endblocktrans %}
+            </strong></em>
+        </p>
+    {% endif %}
+
+    {% if has_welcome %}
+        <p>
+            {% blocktrans %}
+                Your login details are below:
+            {% endblocktrans %}
+        </p>
+        <p>
+            {{ barcode_text }}: <strong>{{ card_number }}</strong>
+            <br>
+            {{ pin_text }}: {% blocktranslate %}use the password you created when you signed up for a card{% endblocktranslate %}
+        </p>
+    {%  endif %}
+
+    <p>
+        {% blocktrans with library_name=library.name %}
+            You are receiving this message because someone used this email address to request a library card for
+            {{ library_name }}. If you were not expecting this to happen, please ignore this
+        {% endblocktrans %}
         {# We keep the text "message" in both if-else blocks so that we can control the spacing for the "."(period) #}
-        {% translate "If you were not expecting this to happen, please ignore this" %}
         {% if has_verification %}
-            {% translate "message and do NOT click the verification link below." %}
+            {% translate "message and do not click the verification link above." %}
         {% else %}
             {% translate "message." %}
         {% endif %}
     </p>
 
-    <p>{% blocktrans with library_name=library.name %}Thank you for joining {{ library_name }}.{% endblocktrans %}
-    </p>
-
-    {% if has_verification %}
-    <p>{% blocktrans with link=link %} Please verify your email address by clicking this link: <a
-            href="{{ verification_link }}">{{ verification_link }}</a> {% endblocktrans %}
-        <br>
-        {% blocktrans %} This link is valid for 24 hours,
-        after which you may recreate a new verification email by visiting the same link. {% endblocktrans %}
-        <br>
-        {% blocktrans %} Your account will not be activated until the link has been clicked.{% endblocktrans %}
-    </p>
-    {% endif %}
-
-    {% if has_welcome %}
-    <p>{% blocktrans with card_number=card_number barcode_text=library.barcode_text%}Your library {{ barcode_text }} is
-        <strong>{{ card_number }}</strong>.{% endblocktrans %}
-        <br>
-        {% blocktrans with barcode_text=library.barcode_text%}Please remember this {{ barcode_text }} so you may use it
-        to access library materials available in Palace.{% endblocktrans %}
-        <br>
-        {% blocktrans with barcode_text=library.barcode_text pin_text=library.pin_text%}Use the {{ barcode_text }} and
-        the {{ pin_text }} you set when you applied to login to the Palace app.{% endblocktrans %}
-    </p>
-
-    <p>{% blocktrans with pin_text=library.pin_text%}You can go to your personal space to manage your account, manage
-        your information, or even reset your {{ pin_text }}, if needed.{% endblocktrans %}
-        <br>
-        {% blocktrans %}You can log into your personal space here: {% endblocktrans %}
-        <a href="{{ login_url }}">{{ login_url }}</a>
-    </p>
-    {% endif %}
-
     {{ custom_bottom_text | safe }}
 
-    <p>{% blocktrans with library_name=library.name %}The {{ library_name }} team{% endblocktrans %}</p>
+    <p>
+        {% blocktrans %}
+            Happy Reading,
+        {% endblocktrans %}
+        <br>
+        {% blocktrans with library_name=library.name %}
+            The Palace Team and {{ library_name }}
+        {% endblocktrans %}
+    </p>
 
 </body>
 
