[PP-3496] Fix text colors of some buttons and text blocks.

--- a/templates/django/admin/base_site.html
+++ b/templates/django/admin/base_site.html
@@ -168,17 +168,13 @@
                 color: var(--header-link-color);
             }
 
-
-            #content-main .object-tools a:link, #content-main .object-tools a:visited {
-                color: white;
+            #content-main .object-tools a:link, #content-main .object-tools a:visited, #content-main h2,
+            #content-main .button, #content-main .selector-chosen-title label, #content-main .selector-chosen-title p {
+                color: var(--primary-fg);
             }
 
             #content-main #changelist-filter li.selected {
                 border-left: 5px solid var(--header-link-color);
-            }
-
-            #content-main .quiet, #content-main a.quiet:link, #content-maina.quiet:visited {
-                color: var(--dark-grey-color);;
             }
 
             #content-main .quiet, #content-main a.quiet:link, #content-main a.quiet:visited {
